# V-Fashion-Insight

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/processed/: metadata.json
data/raw/: metadata.json
notebooks/: 01_eda.ipynb
reports/: eda_report.md
reports/metrics/: data_validation.json  eda_summary.json  exact_duplicate_analysis.json  exact_duplicate_groups.csv  label_distribution.csv  label_distribution.json  mentioned_aspect_distribution.csv  near_duplicate_analysis.json  near_duplicate_clusters.csv  near_duplicate_pairs.csv  preprocessing_audit.json  split_report.json  text_length_percentiles.csv  text_pattern_counts.csv  text_profile.json
src/v_fashion_insight/: __init__.py
src/v_fashion_insight/common/: __init__.py  constants.py  logging.py  reproducibility.py
src/v_fashion_insight/data/: analyze_duplicates.py  analyze_near_duplicates.py  check_splits.py  download.py  eda_report.py  grouping.py  preprocess.py  processed_contract.py  profile_labels.py  profile_text.py  split.py  validate.py
tests/: test_analyze_duplicates.py  test_analyze_near_duplicates.py  test_check_splits.py  test_constants.py  test_download.py  test_eda_report.py  test_grouping.py  test_logging.py  test_package.py  test_preprocess.py  test_processed_contract.py  test_profile_labels.py  test_profile_text.py  test_reproducibility.py  test_split.py  test_validate.py
