[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "v-fashion-insight"
version = "0.1.0"
description = "Aspect-based sentiment analysis for Vietnamese fashion reviews."
requires-python = ">=3.11,<3.12"
dependencies = [
    "datasets>=2.19,<5",
    "joblib>=1.3,<2",
    "matplotlib>=3.8,<4",
    "numpy>=1.26,<3",
    "pandas>=2.1,<4",
    "PyYAML>=6,<7",
    "scikit-learn>=1.4,<2",
    "seaborn>=0.13,<1",
]

[project.scripts]
vfi-download-data = "v_fashion_insight.data.download:main"

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
